# python-honestdid

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/: rtd_requirements.txt
docs/source/: conf.py  index.md
honestdid/: calc.py
tests/test_calc/: test_square.py
