[tool.poetry]
name = "honestdid"
version = "0.1.0"
description = ""
authors = ["arjun-shanmugam <65803362+arjun-shanmugam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
