[tool.poetry]
name = "honestdid"
version = "0.1.0"
description = ""
authors = ["arjun-shanmugam <65803362+arjun-shanmugam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
hypothesis = "^6.79.2"


[tool.poetry.group.doc.dependencies]
myst-parser = "^2.0.0"
sphinx = "^7.0.1"
sphinx-autobuild = "^2021.3.14"
nbsphinx = "^0.9.2"
sphinx-autoapi = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["hypothesis", "pytest"]

[tool.black]
line-length = 79
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| docs
)/
'''
